--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
